# awald

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
python/: pyproject.toml  test_dummy.py
python/awald_python/: __init__.py
src/: README.md  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  package.json  tauri.conf.json
src-tauri/src/: data.rs  lib.rs
src/src/routes/: +page.svelte
