[project]
name = "awald-python"
version = "0.1.0"
description = "Python backend for Awald statistical computing"
authors = [
    {name = "Awald contributors"}
]
requires-python = ">=3.11"
dependencies = [
    "pyfixest>=0.30",
    "statsmodels>=0.14",
    "polars>=1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6"
]
